# Hollow-Engine

./: .gitignore  CMakeLists.txt  InstallExternal.bat  README.md  Readme.md  cpp.hint
CMake/: SetupConfig.cmake  (+1 more)
Source/Application/: CMakeLists.txt  GameApplication.cpp  GameApplication.h  GameGraphicsModule.cpp  GameGraphicsModule.h  GameWindowModule.cpp  GameWindowModule.h  main.cpp
Source/Editor/: CMakeLists.txt
Source/Editor/API/: ImGuiAPI.h  ImGuiWindowAPI.h
Source/Editor/GUIWindow/: GuiWindow.h
Source/Editor/ImGui/: ImGuiRenderer.cpp  ImGuiRenderer.h
Source/Editor/ImguiRenderer/: ImguiRenderer.cpp  ImguiRenderer.h
Source/Editor/Object/: IEditorObject.h
Source/Editor/RenderModules/: ImGuiBeginModule.cpp  ImGuiBeginModule.h  ImGuiEndModule.cpp  ImGuiEndModule.h  ImGuiRenderModule.cpp  ImGuiRenderModule.h  ImGuiWindowModule.cpp  ImGuiWindowModule.h
Source/Editor/Settings/: ColorSettings.h
Source/Editor/Shaders/: EditorFragment.glsl  EditorVertex.glsl
Source/Editor/Utils/: ImGuiUtils.h
Source/EditorPlayer/: CMakeLists.txt  EditorPlayerApplication.cpp  EditorPlayerApplication.h  EditorPlayerGraphicsModule.cpp  EditorPlayerGraphicsModule.h  EditorPlayerWindowModule.cpp  EditorPlayerWindowModule.h  main.cpp
Source/Engine/: CMakeLists.txt  main.cpp
Source/Engine/Application/: Application.cpp  Application.h  ApplicationModule.h  ApplicationModuleState.h
Source/Engine/Core/: Core.h  Definitions.h  GlobalConsole.cpp  GlobalConsole.h  Guid.cpp  Guid.h  StdFix.h
Source/Engine/Event/: Event.h  EventHandler.h
Source/Engine/Job/: JobQueue.h  JobThread.h
Source/Engine/Math/: ColorConverter.h
Source/Engine/Memory/: MemoryBuffer.cpp  MemoryBuffer.h  MemoryOwnedBuffer.cpp  MemoryOwnedBuffer.h
Source/Engine/Monitor/: Monitor.h  MonitorDesc.h
Source/Engine/Object/: API.h  IObject.h
Source/Engine/Platform/: PlatformClipboard.cpp  PlatformClipboard.h  PlatformDirectory.cpp  PlatformDirectory.h  PlatformError.cpp  PlatformError.h  PlatformFile.cpp  PlatformFile.h  PlatformGuid.cpp  PlatformGuid.h  PlatformMessage.cpp  PlatformMessage.h  PlatformMonitor.h  PlatformPath.cpp  PlatformPath.h  PlatformTime.cpp  PlatformTime.h  PlatformWindow.cpp  PlatformWindow.h
Source/Engine/Reflection/: Class.h  EnumType.h  EnumValue.h  FieldType.h
Source/Engine/Serialization/: JArray.h  JBool.h  JNode.h  JNumber.h  JObject.h  JString.h
Source/Engine/ShaderCompiler/: ShaderCompiler.cpp  ShaderCompiler.h  ShaderIncluder.cpp  ShaderIncluder.h
Source/Engine/Time/: Time.h
Source/Engine/Win32/: Win32Clipboard.h  Win32Directory.cpp  Win32Directory.h  Win32Error.cpp  Win32Error.h  Win32File.cpp  Win32File.h  Win32Guid.cpp  Win32Guid.h  Win32Message.cpp  Win32Message.h  Win32Path.cpp  Win32Path.h  Win32Time.cpp  Win32Time.h
Source/Engine/Window/: WindowAPI.h  WindowDesc.h  WindowEventType.h  WindowManager.h  WindowMode.h  WindowModule.cpp  WindowModule.h
Source/MiniVk/: CMakeLists.txt  main.cpp
Source/MiniVk/Buffer/: Buffer.cpp  Buffer.h
Source/MiniVk/Descriptor/: DescriptorLayout.cpp  DescriptorLayout.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSet.cpp  DescriptorSet.h
Source/MiniVk/Pipeline/: Pipeline.cpp  Pipeline.h
Source/MiniVk/Queue/: Queue.cpp  Queue.h
Source/MiniVk/RenderPass/: RenderPass.cpp  RenderPass.h
Source/MiniVk/Renderer/: Renderer.cpp  Renderer.h
Source/MiniVk/Shader/: Shader.cpp  Shader.h
Source/MiniVk/ShaderCompiler/: ShaderCompiler.cpp  ShaderCompiler.h  ShaderCompilerUtils.h
Source/MiniVk/Window/: Window.cpp  Window.h  WindowDesc.h
Source/Runtime/: CMakeLists.txt  main.cpp
Source/Runtime/Application/: Application.cpp  Application.h  ApplicationModule.cpp  ApplicationModule.h  ApplicationModuleState.h
Source/Runtime/Compiler/: ShaderCompiler.cpp  ShaderCompiler.h  ShaderCompilerUtils.h
Source/Runtime/Core/: Core.cpp  Core.h  Definitions.h  GlobalConsole.cpp  GlobalConsole.h  Guid.cpp  Guid.h  StdFix.h
Source/Runtime/Event/: Event.h  EventHandler.h
Source/Runtime/Graphics/: GraphicsManager.cpp  GraphicsManager.h
Source/Runtime/Memory/: MemoryBuffer.cpp  MemoryBuffer.h  MemoryOwnedBuffer.cpp  MemoryOwnedBuffer.h
Source/Runtime/Monitor/: Monitor.h  MonitorDesc.h
Source/Runtime/Object/: API.h  IObject.h  Manager.h  ManagerAPI.h  Object.h
Source/Runtime/Platform/: PlatformAPI.h  PlatformClipboard.cpp  PlatformClipboard.h  PlatformDirectory.cpp  PlatformDirectory.h  PlatformError.cpp  PlatformError.h  PlatformFile.cpp  PlatformFile.h  PlatformGuid.cpp  PlatformGuid.h  PlatformMessage.cpp  PlatformMessage.h  PlatformMonitor.cpp  PlatformMonitor.h  PlatformPath.cpp  PlatformPath.h  PlatformWindow.cpp  PlatformWindow.h
Source/Runtime/ShaderCompiler/: ShaderBlockMember.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderCompilerUtils.h  ShaderDescriptorBinding.h  ShaderDescriptorBindingType.h  ShaderDescriptorSet.h  ShaderIODescriptor.h  ShaderIOSemantic.h  ShaderIncluder.cpp  ShaderIncluder.h  ShaderReflection.h
Source/Runtime/Win32/: Win32Clipboard.cpp  Win32Clipboard.h  Win32Directory.cpp  Win32Directory.h  Win32Error.cpp  Win32Error.h  Win32File.cpp  Win32File.h  Win32Guid.cpp  Win32Guid.h  Win32Message.cpp  Win32Message.h  Win32Monitor.cpp  Win32Monitor.h  Win32Path.cpp  Win32Path.h  Win32Window.cpp  Win32Window.h
Source/Runtime/Window/: Window.cpp  Window.h  WindowDesc.h  WindowEventDesc.h  WindowEventType.h  WindowManager.h  WindowMode.h
Source/Test/: CMakeLists.txt  main.cpp
Source/Tests/Triangle/: CMakeLists.txt  main.cpp
TestCases/: CMakeLists.txt  TestApp.h  main.cpp
Tests/01_Runtime/: CMakeLists.txt  main.cpp
Tests/01_Runtime/Lights/: AmbientLight.h
Tests/02_PBR/: CMakeLists.txt  main.cpp  main.h
Tests/02_ShaderReflection/: CMakeLists.txt  main.cpp  testVertex.vert
Tests/03_RenderTarget/: CMakeLists.txt  main.cpp
Tests/03_Resource/: CMakeLists.txt  main.cpp
Tests/04_RenderTarget/: CMakeLists.txt  main.cpp
Tests/05_Editor/: CMakeLists.txt  main.cpp
Tests/05_EventTest/: CMakeLists.txt  main.cpp
Tests/05_Shading/: CMakeLists.txt  main.cpp
Tests/06_Sponza/: CMakeLists.txt  main.cpp
(+543 files in other folders)
